--- a/build.gradle
+++ b/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
     compile group: 'org.json', name: 'json', version: '+'
     compile group: 'rome', name: 'rome', version: '+'
+    compile 'com.google.apis:google-api-services-youtube:v3-rev187-1.23.0'
 }
