--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ apply plugin: 'application'
 
 mainClassName = 'sh.okx.omicron.Omicron'
 
-sourceCompatibility = 1.9
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -17,7 +18,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'net.dv8tion:JDA:+'
-    compile 'com.sedmelluq:lavaplayer:1.2.29'
+    compile 'com.sedmelluq:lavaplayer:1.2.45'
     compile 'commons-io:commons-io:+'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '+'
     compile group: 'org.apache.commons', name: 'commons-text', version: '+'
@@ -25,7 +26,8 @@ dependencies {
     compile group: 'org.json', name: 'json', version: '+'
     compile group: 'rome', name: 'rome', version: '+'
     compile 'com.google.apis:google-api-services-youtube:v3-rev187-1.23.0'
-    compile 'net.dean.jraw:JRAW:+'
+    compile 'net.dean.jraw:JRAW:0.9.0'
+    compile 'com.squareup.okhttp3:okhttp:3.9.1'
 }
 
 task fatJar(type: Jar) {
@@ -35,4 +37,10 @@ task fatJar(type: Jar) {
     baseName = project.name + '-all'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
+}
+
+jar {
+    manifest {
+        attributes('Main-Class' : 'sh.okx.omicron.Omicron')
+    }
 }
