--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'com.google.apis:google-api-services-youtube:v3-rev187-1.23.0'
     compile 'net.dean.jraw:JRAW:0.9.0'
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    compile 'mysql:mysql-connector-java:5.1.37'
 }
 
 task fatJar(type: Jar) {
