--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,12 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '+'
     compile group: 'org.apache.commons', name: 'commons-text', version: '+'
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
-    compile group: 'org.json', name: 'json', version: '+'
     compile group: 'rome', name: 'rome', version: '+'
     compile 'com.google.apis:google-api-services-youtube:v3-rev187-1.23.0'
     compile 'net.dean.jraw:JRAW:0.9.0'
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     compile 'mysql:mysql-connector-java:5.1.37'
+    compile 'redis.clients:jedis:2.9.0'
 }
 
 task fatJar(type: Jar) {
