--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ targetCompatibility = 1.8
 repositories {
     mavenCentral()
     jcenter()
+    maven {
+        url 'https://jitpack.io'
+    }
 }
 
 dependencies {
@@ -30,4 +33,9 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     compile 'mysql:mysql-connector-java:5.1.37'
     compile 'redis.clients:jedis:2.9.0'
+    compile 'com.github.okx-code:MySqlLib:master-SNAPSHOT'
+}
+
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
