--- a/build.gradle
+++ b/build.gradle
@@ -35,3 +35,7 @@ dependencies {
     compile 'redis.clients:jedis:2.9.0'
     compile 'com.github.okx-code:MySqlLib:master-SNAPSHOT'
 }
+
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 1, 'seconds'
+}
